[package]
name = "chamberlain"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = [
    "axum",
    "bitcoin",
    "cdk",
    "cdk-ldk",
    "cdk-redb",
    "cdk-axum",
    "clap",
    "dirs",
    "futures",
    "instant-acme",
    "public-ip",
    "rcgen",
    "rpassword",
    "serde_json",
    "tokio",
    "tokio-util",
    "tracing-subscriber",
]

[dependencies]
axum = { version = "0.7.5", optional = true }
base64 = "0.22.1"
bitcoin = { version = "0.30", optional = true }
cdk = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-axum = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-ldk = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-redb = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
clap = { version = "4.5.4", features = ["derive", "cargo"], optional = true }
dirs = { version = "5.0.1", optional = true }
futures = { version = "0.3.28", optional = true }
hmac = "0.12.1"
instant-acme = { version = "0.6.1", optional = true }
prost = "0.12.6"
public-ip = { version = "0.2.2", optional = true }
rcgen = { version = "0.13.1", optional = true }
rpassword = { version = "7.3.1", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.66", optional = true }
sha2 = "0.10.8"
spake2 = "0.4.0"
subtle = "2.6.1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
], optional = true }
tokio-util = { version = "0.7.11", optional = true }
toml = "0.8.14"
tonic = { version = "0.11.0", features = ["tls"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
], optional = true }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v7"] }

[build-dependencies]
tonic-build = "0.11.0"
