[package]
name = "chamberlain"
version = "0.1.2"
edition = "2021"
description = "A cashu mint with integrated Lightning node."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/sovereign-apps/chamberlain"
homepage = "https://sovereign.app"
keywords = ["cashu", "lightning", "node", "mint"]
categories = ["blockchain", "networking"]

[features]
default = ["server"]
server = [
    "axum",
    "bitcoin",
    "cdk",
    "cdk-ldk",
    "cdk-redb",
    "cdk-axum",
    "clap",
    "dirs",
    "futures",
    "public-ip",
    "redb",
    "rpassword",
    "serde_json",
    "tokio-util",
    "tracing-subscriber",
]

[dependencies]
axum = { version = "0.6.20", optional = true }
base64 = "0.22.1"
bitcoin = { version = "0.32.2", optional = true }
cdk = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-axum = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-ldk = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-redb = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
clap = { version = "4.5.4", features = ["derive", "cargo"], optional = true }
dirs = { version = "5.0.1", optional = true }
fast-socks5 = "0.9.6"
futures = { version = "0.3.28", optional = true }
hmac = "0.12.1"
hyper-util = { version = "0.1.6", features = ["tokio"] }
prost = "0.13.3"
public-ip = { version = "0.2.2", optional = true }
redb = { version = "2.1.3", optional = true }
rpassword = { version = "7.3.1", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.66", optional = true }
sha2 = "0.10.8"
spake2 = "0.4.0"
subtle = "2.6.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.11", optional = true }
toml = "0.8.14"
tonic = { version = "0.12.2", features = ["channel", "tls"] }
tower = { version = "0.5.1", features = ["util"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
], optional = true }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v7"] }

[build-dependencies]
tonic-build = "0.12.2"
