[package]
name = "chamberlain"
version = "0.2.0"
edition = "2021"
description = "A cashu mint with integrated Lightning node."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/sovereign-apps/chamberlain"
homepage = "https://sovereign.app"
keywords = ["cashu", "lightning", "node", "mint"]
categories = ["blockchain", "networking"]

[features]
default = ["server"]
server = [
    "axum",
    "bitcoin",
    "cdk",
    "cdk-ldk",
    "cdk-redb",
    "cdk-axum",
    "clap",
    "dirs",
    "envy",
    "futures",
    "jsonwebtoken",
    "public-ip",
    "redb",
    "reqwest",
    "tokio-util",
    "tracing-subscriber",
]

[dependencies]
axum = { version = "0.6.20", optional = true }
bitcoin = { version = "0.32.4", optional = true }
cdk = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-axum = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-ldk = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
cdk-redb = { git = "https://github.com/davidcaseria/cdk", branch = "ldk", optional = true }
clap = { version = "4.5.21", features = ["derive", "cargo"], optional = true }
dirs = { version = "5.0.1", optional = true }
envy = { version = "0.4.2", optional = true }
futures = { version = "0.3.28", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
prost = "0.13.3"
public-ip = { version = "0.2.2", optional = true }
redb = { version = "2.2.0", optional = true }
reqwest = { version = "0.12.9", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.11", optional = true }
toml = "0.8.14"
tonic = { version = "0.12.2", features = [
    "channel",
    "tls",
    "tls-native-roots",
    "tls-webpki-roots",
] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
], optional = true }
url = { version = "2.5.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12.2"
